--- a/Container/.devcontainer/Dockerfile
+++ b/Container/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/cpp:1-ubuntu-22.04
+FROM --platform=linux/amd64 mcr.microsoft.com/devcontainers/cpp:1-ubuntu-22.04
 
 # Install additional packages
 RUN apt-get update \
